Add doughnut charts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,6 @@
 
 <div>
   <canvas #canvas id="canvas">{{ chart }}</canvas>
+  <canvas #canvas id="canvas1">{{ doughnutLeft }}</canvas>
+  <canvas #canvas id="canvas2">{{ doughnutRight }}</canvas>
 </div>
