Add chart contexts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 
 <div>
   <canvas #canvas id="canvas">{{ chart }}</canvas>
-  <canvas #canvas id="canvas1">{{ doughnutLeft }}</canvas>
-  <canvas #canvas id="canvas2">{{ doughnutRight }}</canvas>
+  <canvas #canvasBar id="canvasBar">{{ barChart }}</canvas>
+  <canvas #canvasDoughbutLeft id="canvasDoughbutLeft">{{ doughnutLeft }}</canvas>
+  <canvas #canvasDoughbutRight id="canvasDoughbutRight">{{ doughnutRight }}</canvas>
 </div>
