Add overall attendance chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <div>
   <canvas #canvas id="canvas">{{ chart }}</canvas>
   <canvas #canvasBar id="canvasBar">{{ barChart }}</canvas>
+  <canvas #canvasLine id="canvasLine">{{ lineChart }}</canvas>
   <canvas #canvasDoughbutLeft id="canvasDoughbutLeft">{{ doughnutLeft }}</canvas>
   <canvas #canvasDoughbutRight id="canvasDoughbutRight">{{ doughnutRight }}</canvas>
 </div>
