--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,52 @@
-.lala2 {
-  margin-top: 1000px;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background-color: rgb(0, 93, 83);
+}
+
+.App {
+  text-align: center;
+}
+
+p {
+  color: rgb(0, 93, 83);
+}
+
+.wrapper {
+  width: 100%;
+  text-align: center;
+}
+
+.bar {
+  padding: 2%;
+  width: 40%;
+  margin-top: 10%;
+  margin-left: 25%;
+  background-color: white;
+  border-radius: 25px;
+}
+
+.doughnut-1 {
+  float: left;
+  width: 25%;
+  padding: 5%;
+  margin-left: 10%;
+  margin-bottom: 10%;
+  background-color: white;
+  border-radius: 25px;
+}
+
+.doughnut-2 {
+  float: left;
+  width: 25%;
+  padding: 5%;
+  margin-left: 5%;
+  background-color: white;
+  border-radius: 25px;
+}
+
+.h-bars {
+  width: 80%;
+  margin-left: 5%;
 }
