--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,14 @@
 
 <div class="App">
   <div class="wrapper">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <p><strong>Result: Knowledge before and after course</strong></p>
+          <canvas #canvasBar id="canvasBar">{{ barChart }}</canvas>
+        </div>
+      </div>
+    </div>
     <div class="bar">
       <p><strong>Result: Knowledge before and after course</strong></p>
       <canvas #canvasBar id="canvasBar">{{ barChart }}</canvas>
