--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,30 +5,33 @@
   <div class="wrapper">
     <div class="container">
       <div class="row">
-        <div class="col-sm">
+        <div class="col-md-8 col-md-push-2">
           <p><strong>Result: Knowledge before and after course</strong></p>
           <canvas #canvasBar id="canvasBar">{{ barChart }}</canvas>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-6">
+          <p><strong>User demographics: Role</strong></p>
+          <canvas #canvasDoughbutLeft id="canvasDoughbutLeft">{{ doughnutLeft }}</canvas>
+        </div>
+        <div class="col-md-6">
+          <p><strong>Employees enrolled vs not enrolled</strong></p>
+          <canvas #canvasDoughbutRight id="canvasDoughbutRight">{{ doughnutRight }}</canvas>
+        </div>
+      </div>
     </div>
-    <div class="bar">
-      <p><strong>Result: Knowledge before and after course</strong></p>
-      <canvas #canvasBar id="canvasBar">{{ barChart }}</canvas>
+    <div class="row">
+        <div class="col-md-8 col-md-push-2">
+        <p><strong>Result: Knowledge before and after course</strong></p>
+        <canvas #canvasLine id="canvasLine">{{ lineChart }}</canvas>
+      </div>
     </div>
-    <div class="lineChart">
-      <canvas #canvasLine id="canvasLine">{{ lineChart }}</canvas>
-    </div>
-    <div class="doughnut-1">
-      <p><strong>User demographics: Role</strong></p>
-      <canvas #canvasDoughbutLeft id="canvasDoughbutLeft">{{ doughnutLeft }}</canvas>
-    </div>
-    <div class="doughnut-2">
-      <p><strong>Employees enrolled vs not enrolled</strong></p>
-      <canvas #canvasDoughbutRight id="canvasDoughbutRight">{{ doughnutRight }}</canvas>
-    </div>
-    <div class="h-bars">
-      <p><strong>Result: Baseline assessment</strong></p>
-      <canvas #canvas id="canvas">{{ chart }}</canvas>
+    <div class="row">
+      <div class="col-md-8 col-md-push-2">
+        <p><strong>Result: Baseline assessment</strong></p>
+        <canvas #canvas id="canvas">{{ chart }}</canvas>
+      </div>
     </div>
   </div>
 </div>
